--- a/src/components/AboutMe/__subtitle/AboutMe__subtitle.sass
+++ b/src/components/AboutMe/__subtitle/AboutMe__subtitle.sass
@@ -1,5 +1,5 @@
 .AboutMe__subtitle
     font-family: roboto
     font-weight: normal
-    margin: 0 0 10px 0
+    margin: 0 0 0 0
     font-size: 20px
