первая версия готова

--- a/src/components/MyLinks/MyLinks.sass
+++ b/src/components/MyLinks/MyLinks.sass
@@ -1,7 +1,7 @@
-@import './__icon/Links__icon'
-@import './__button/Links__button'
+@import './__icon/MyLinks__icon'
+@import './__button/MyLinks__button'
 
-.Links 
+.MyLinks 
     width: 100%
     display: flex
     justify-content: center
