--- a/src/components/MyLinks/__button/MyLinks__button.sass
+++ b/src/components/MyLinks/__button/MyLinks__button.sass
@@ -1,4 +1,4 @@
-.Links__button
+.MyLinks__button
     height: 30px
     width: auto
     color: white
@@ -14,3 +14,8 @@
     font-weight: normal
     line-height: 14px
     font-family: Roboto
+    transition: background-color 0.2s linear
+
+.MyLinks__button:hover
+    background-color: red
+    transition: background-color 0.2s linear
