--- a/src/components/AboutMe/__title/AboutMe__title.sass
+++ b/src/components/AboutMe/__title/AboutMe__title.sass
@@ -1,5 +1,5 @@
 .AboutMe__title
     font-family: Roboto
     font-weight: bold
-    margin: 0 0 10px 0
+    margin: 0 30px 10px 30px
     font-size: 32px
