--- a/src/components/MyProjects/__icon/MyProjects__icon.sass
+++ b/src/components/MyProjects/__icon/MyProjects__icon.sass
@@ -1,9 +1,9 @@
-.Projects__icon
+.MyProjects__icon
     width: 80px
     height: 80px
     margin: 0 20px 0 0
     background-color: black
     border-radius: 30%
 
-.Projects__icon:last-of-type
+.MyProjects__icon:last-of-type
     margin-right: 0
