--- a/src/components/info/info.sass
+++ b/src/components/info/info.sass
@@ -67,6 +67,9 @@
     .info_text
         font-size: 14px
 
+    .info_important-text
+        font-size: 14px
+
     .info_link
         width: 230px
         font-size: 14px
