--- a/src/components/Project/Project.sass
+++ b/src/components/Project/Project.sass
@@ -12,3 +12,9 @@
 
 .Project:last-of-type
     margin-right: 0
+
+@media(max-width: 500px)
+    .Project
+        width: 60px
+        height: 60px
+        margin-right: 10px
