--- a/src/components/MyProjects/MyProjects.sass
+++ b/src/components/MyProjects/MyProjects.sass
@@ -2,7 +2,10 @@
 @import './__icon/MyProjects__icon'
 
 .MyProjects
-    width: 100%
+    width: 1000px
+    margin: 0 auto
+    padding: 0 50px
+    box-sizing: border-box
     display: flex
     flex-wrap: wrap
     justify-content: center
