--- a/src/components/Project/Project.sass
+++ b/src/components/Project/Project.sass
@@ -1,20 +1,21 @@
+@import './__title/Project__title'
+@import './__img/Project__img'
+
 .Project
-    width: 80px
-    height: 80px
-    margin: 0 20px 0 0
-    background-color: white
-    border-radius: 27%
+    width: 100%
+    height: 500px
+    background-color: #DDDDDD
+    border-radius: 10px
     overflow: hidden
     outline: none
     cursor: pointer
     border: none
-    padding: 0
 
-.Project:last-of-type
-    margin-right: 0
+// .Project:last-of-type
+//     margin-right: 0
 
-@media(max-width: 500px)
-    .Project
-        width: 60px
-        height: 60px
-        margin-right: 10px
+// @media(max-width: 500px)
+//     .Project
+//         width: 60px
+//         height: 60px
+//         margin-right: 10px
