carousel component installed and configured

--- a/src/components/Project/Project.sass
+++ b/src/components/Project/Project.sass
@@ -1,15 +1,17 @@
-@import './__title/Project__title'
+@import './__description/Project__description'
 @import './__img/Project__img'
+@import './__buttons/Project__buttons'
 
 .Project
     width: 100%
-    height: 500px
+    // height: 500px
     background-color: #DDDDDD
     border-radius: 10px
     overflow: hidden
     outline: none
     cursor: pointer
     border: none
+    padding-bottom: 25px
 
 // .Project:last-of-type
 //     margin-right: 0
