--- a/src/components/Link/Link.sass
+++ b/src/components/Link/Link.sass
@@ -1,6 +1,6 @@
 .Link
     height: 30px
-    margin: 0 10px 0 0
+    margin: 0 10px 10px 0
     color: white
     border: none
     background-color: #222
@@ -11,12 +11,15 @@
     text-decoration: none
     font-size: 14px
     font-weight: normal
-    line-height: 14px
+    line-height: 16px
     font-family: Roboto
     transition: background-color 0.2s linear
+    text-transform: uppercase
+    letter-spacing: .5px
 
 .Link:last-of-type
     margin-right: 0
+    margin-bottom: 0
 
 .Link:hover
     background-color: red
