--- a/src/components/MyProjects/MyProjects.sass
+++ b/src/components/MyProjects/MyProjects.sass
@@ -9,3 +9,11 @@
     display: flex
     flex-wrap: wrap
     justify-content: center
+
+@media(max-width: 1100px)
+    .MyProjects
+        width: 100%
+
+@media(max-width: 500px)
+    .MyProjects
+        padding: 0 25px
