--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -8,5 +8,10 @@
     flex-direction: column;
     overflow: hidden;
     padding: 0 0 60px 0;
-    margin: 0 0;
+    margin: 0;
+}
+
+.Carousel__container {
+    width: 100%;
+    position: relative;
 }
