--- a/src/components/Carousel/components/CarouselButton/CarouselButton.css
+++ b/src/components/Carousel/components/CarouselButton/CarouselButton.css
@@ -1,29 +1,14 @@
 .CarouselButton {
     position: absolute;
-    width: 40px;
-    height: 40px;
-    top: calc(50% - 50px);
-    background-color: black;
-    border-radius: 50%;
+    background-color: rgba(0,0,0,0);
     border: none;
     z-index: 10;
     cursor: pointer;
-    color: white;
-    font-size: 25px;
     padding: 0;
-    text-align: center;
     outline: none;
     -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
     -webkit-tap-highlight-color: transparent;
     transition: opacity .3s linear;
-}
-
-.CarouselButton_previous {
-    left: 10px;
-}
-
-.CarouselButton_next {
-    right: 10px;
 }
 
 .CarouselButton_unactive {
