added list of technologies used for each project

--- a/src/components/Project/Project.sass
+++ b/src/components/Project/Project.sass
@@ -1,6 +1,8 @@
 @import './__description/Project__description'
 @import './__img/Project__img'
 @import './__buttons/Project__buttons'
+@import './__tehnologies/Project__tehnologies'
+@import './__tehnology/Project__tehnology'
 
 .Project
     width: 100%
