--- a/src/components/Project/__description/Project__description.sass
+++ b/src/components/Project/__description/Project__description.sass
@@ -1,6 +1,6 @@
 .Project__description
     width: calc(100% - 50px)
-    margin: 16px 25px
+    margin: 0 25px 16px 25px
     font-family: Roboto
     font-weight: bold
     font-size: 18px
