block about me changed

--- a/src/components/AboutMe/AboutMe.sass
+++ b/src/components/AboutMe/AboutMe.sass
@@ -3,7 +3,16 @@
 @import './__subtitle/AboutMe__subtitle'
     
 .AboutMe
+    width: 1000px
     display: flex
-    flex-direction: column
-    align-items: center
-    margin: 0 0 30px 0
+    margin: 0 auto 30px
+    padding: 0 50px
+    box-sizing: border-box
+
+@media(max-width: 1100px)
+    .AboutMe
+        width: 100%
+
+@media(max-width: 500px)
+    .AboutMe
+        padding: 0 25px
