--- a/src/components/AboutMe/__subtitle/AboutMe__subtitle.sass
+++ b/src/components/AboutMe/__subtitle/AboutMe__subtitle.sass
@@ -1,5 +1,13 @@
 .AboutMe__subtitle
+    width: 100%
     font-family: roboto
     font-weight: normal
     margin: 0 0 0 0
     font-size: 20px
+    line-height: 23px
+    text-align: left
+
+@media(max-width: 400px)
+    .AboutMe__subtitle
+        font-size: 16px
+        line-height: 18px
