--- a/src/components/AboutMe/__title/AboutMe__title.sass
+++ b/src/components/AboutMe/__title/AboutMe__title.sass
@@ -1,5 +1,14 @@
 .AboutMe__title
+    width: 100%
     font-family: Roboto
     font-weight: bold
-    margin: 0 30px 10px 30px
+    margin: 0 0 10px 0
+    margin-right: 0
     font-size: 32px
+    line-height: 36px
+    text-align: left
+
+@media(max-width: 400px)
+    .AboutMe__title
+        font-size: 24px
+        line-height: 27px
