--- a/src/components/AboutMe/__userpic/AboutMe__userpic.sass
+++ b/src/components/AboutMe/__userpic/AboutMe__userpic.sass
@@ -2,4 +2,13 @@
     width: 100px
     height: 100px
     border-radius: 50%
-    margin: 0 0 20px 0
+    margin: 0 30px 20px 0
+
+@media(max-width: 500px)
+    .AboutMe__userpic
+        margin-right: 20px
+
+@media(max-width: 400px)
+    .AboutMe__userpic
+        width: 80px
+        height: 80px
