--- a/src/components/MyLinks/MyLinks.sass
+++ b/src/components/MyLinks/MyLinks.sass
@@ -8,11 +8,11 @@
     padding: 0 50px
     box-sizing: border-box
     flex-wrap: wrap
-
-@media(max-width: 1100px)
-    .MyLinks
+    @media(max-width: 1100px)
         width: 100%
-
-@media(max-width: 500px)
-    .MyLinks
+    @media(max-width: 500px)
         padding: 0 25px
+    & .Link
+        display: flex
+        align-items: center
+        justify-content: center
