feature: add swiper instead custom carousel

--- a/src/components/MyProjects/MyProjects.sass
+++ b/src/components/MyProjects/MyProjects.sass
@@ -9,6 +9,10 @@
     display: flex
     flex-wrap: wrap
     justify-content: center
+    & .swiper
+        width: 100%
+        & .swiper-wrapper
+            align-items: stretch
 
 @media(max-width: 1100px)
     .MyProjects
