--- a/src/components/Project/Project.sass
+++ b/src/components/Project/Project.sass
@@ -6,19 +6,13 @@
 
 .Project
     width: 100%
-    // height: 500px
+    height: 100%
     background-color: #DDDDDD
     border-radius: 10px
     overflow: hidden
     outline: none
     border: none
-    padding-bottom: 25px
-
-// .Project:last-of-type
-//     margin-right: 0
-
-// @media(max-width: 500px)
-//     .Project
-//         width: 60px
-//         height: 60px
-//         margin-right: 10px
+    display: flex
+    flex-flow: column
+    padding: 0 0 25px 0
+    box-sizing: border-box
